--- a/Z-Pawn/src/main/resources/io.provider.properties
+++ b/Z-Pawn/src/main/resources/io.provider.properties
@@ -21,43 +21,43 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.io.size_powers.consumer.0=12
-z.com.tgx.chess.io.size_powers.internal.1=7
-z.com.tgx.chess.io.size_powers.provider.2=9
-z.com.tgx.chess.io.size_powers.cluster.3=7
-z.com.tgx.chess.io.consumer.keep_alive=false
-z.com.tgx.chess.io.consumer.connect_timeout_in_second=5S
-z.com.tgx.chess.io.consumer.write_timeout_in_second=15S
-z.com.tgx.chess.io.consumer.read_timeout_in_minute=5M
-z.com.tgx.chess.io.consumer.so_linger_in_second=10S
-z.com.tgx.chess.io.consumer.send_buffer_size=8KB
-z.com.tgx.chess.io.consumer.recv_buffer_size=4KB
-z.com.tgx.chess.io.consumer.send_queue_max=8
-z.com.tgx.chess.io.consumer.tcp_no_delay=true
-z.com.tgx.chess.io.internal.keep_alive=true
-z.com.tgx.chess.io.internal.connect_timeout_in_second=1S
-z.com.tgx.chess.io.internal.write_timeout_in_second=5S
-z.com.tgx.chess.io.internal.read_timeout_in_minute=1M
-z.com.tgx.chess.io.internal.so_linger_in_second=30S
-z.com.tgx.chess.io.internal.send_buffer_size=128KB
-z.com.tgx.chess.io.internal.recv_buffer_size=128KB
-z.com.tgx.chess.io.internal.send_queue_max=64
-z.com.tgx.chess.io.internal.tcp_no_delay=true
-z.com.tgx.chess.io.provider.keep_alive=true
-z.com.tgx.chess.io.provider.connect_timeout_in_second=1S
-z.com.tgx.chess.io.provider.write_timeout_in_second=5S
-z.com.tgx.chess.io.provider.read_timeout_in_minute=1M
-z.com.tgx.chess.io.provider.so_linger_in_second=30S
-z.com.tgx.chess.io.provider.send_buffer_size=128KB
-z.com.tgx.chess.io.provider.recv_buffer_size=128KB
-z.com.tgx.chess.io.provider.send_queue_max=64
-z.com.tgx.chess.io.provider.tcp_no_delay=true
-z.com.tgx.chess.io.cluster.keep_alive=true
-z.com.tgx.chess.io.cluster.connect_timeout_in_second=1S
-z.com.tgx.chess.io.cluster.write_timeout_in_second=5S
-z.com.tgx.chess.io.cluster.read_timeout_in_minute=1M
-z.com.tgx.chess.io.cluster.so_linger_in_second=30S
-z.com.tgx.chess.io.cluster.send_buffer_size=128KB
-z.com.tgx.chess.io.cluster.recv_buffer_size=128KB
-z.com.tgx.chess.io.cluster.send_queue_max=64
-z.com.tgx.chess.io.cluster.tcp_no_delay=true
+z.com.tgx.chess.provider.io.size_powers.consumer.0=12
+z.com.tgx.chess.provider.io.size_powers.internal.1=7
+z.com.tgx.chess.provider.io.size_powers.provider.2=9
+z.com.tgx.chess.provider.io.size_powers.cluster.3=7
+z.com.tgx.chess.provider.io.consumer.keep_alive=false
+z.com.tgx.chess.provider.io.consumer.connect_timeout_in_second=5S
+z.com.tgx.chess.provider.io.consumer.write_timeout_in_second=15S
+z.com.tgx.chess.provider.io.consumer.read_timeout_in_minute=5M
+z.com.tgx.chess.provider.io.consumer.so_linger_in_second=10S
+z.com.tgx.chess.provider.io.consumer.send_buffer_size=8KB
+z.com.tgx.chess.provider.io.consumer.recv_buffer_size=4KB
+z.com.tgx.chess.provider.io.consumer.send_queue_max=8
+z.com.tgx.chess.provider.io.consumer.tcp_no_delay=true
+z.com.tgx.chess.provider.io.internal.keep_alive=true
+z.com.tgx.chess.provider.io.internal.connect_timeout_in_second=1S
+z.com.tgx.chess.provider.io.internal.write_timeout_in_second=5S
+z.com.tgx.chess.provider.io.internal.read_timeout_in_minute=1M
+z.com.tgx.chess.provider.io.internal.so_linger_in_second=30S
+z.com.tgx.chess.provider.io.internal.send_buffer_size=128KB
+z.com.tgx.chess.provider.io.internal.recv_buffer_size=128KB
+z.com.tgx.chess.provider.io.internal.send_queue_max=64
+z.com.tgx.chess.provider.io.internal.tcp_no_delay=true
+z.com.tgx.chess.provider.io.provider.keep_alive=true
+z.com.tgx.chess.provider.io.provider.connect_timeout_in_second=1S
+z.com.tgx.chess.provider.io.provider.write_timeout_in_second=5S
+z.com.tgx.chess.provider.io.provider.read_timeout_in_minute=1M
+z.com.tgx.chess.provider.io.provider.so_linger_in_second=30S
+z.com.tgx.chess.provider.io.provider.send_buffer_size=128KB
+z.com.tgx.chess.provider.io.provider.recv_buffer_size=128KB
+z.com.tgx.chess.provider.io.provider.send_queue_max=64
+z.com.tgx.chess.provider.io.provider.tcp_no_delay=true
+z.com.tgx.chess.provider.io.cluster.keep_alive=true
+z.com.tgx.chess.provider.io.cluster.connect_timeout_in_second=1S
+z.com.tgx.chess.provider.io.cluster.write_timeout_in_second=5S
+z.com.tgx.chess.provider.io.cluster.read_timeout_in_minute=1M
+z.com.tgx.chess.provider.io.cluster.so_linger_in_second=30S
+z.com.tgx.chess.provider.io.cluster.send_buffer_size=128KB
+z.com.tgx.chess.provider.io.cluster.recv_buffer_size=128KB
+z.com.tgx.chess.provider.io.cluster.send_queue_max=64
+z.com.tgx.chess.provider.io.cluster.tcp_no_delay=true
