--- a/Z-Knight/src/main/resources/io.cluster.properties
+++ b/Z-Knight/src/main/resources/io.cluster.properties
@@ -21,23 +21,23 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.io.size_powers.cluster.3=7
-z.com.tgx.chess.io.size_powers.internal.1=5
-z.com.tgx.chess.io.cluster.keep_alive=true
-z.com.tgx.chess.io.cluster.connect_timeout_in_second=1S
-z.com.tgx.chess.io.cluster.write_timeout_in_second=10S
-z.com.tgx.chess.io.cluster.read_timeout_in_minute=1M
-z.com.tgx.chess.io.cluster.so_linger_in_second=30S
-z.com.tgx.chess.io.cluster.send_buffer_size=128KB
-z.com.tgx.chess.io.cluster.recv_buffer_size=128KB
-z.com.tgx.chess.io.cluster.send_queue_max=64
-z.com.tgx.chess.io.cluster.tcp_no_delay=true
-z.com.tgx.chess.io.internal.keep_alive=true
-z.com.tgx.chess.io.internal.connect_timeout_in_second=1S
-z.com.tgx.chess.io.internal.write_timeout_in_second=5S
-z.com.tgx.chess.io.internal.read_timeout_in_minute=1M
-z.com.tgx.chess.io.internal.so_linger_in_second=30S
-z.com.tgx.chess.io.internal.send_buffer_size=128KB
-z.com.tgx.chess.io.internal.recv_buffer_size=128KB
-z.com.tgx.chess.io.internal.send_queue_max=64
-z.com.tgx.chess.io.internal.tcp_no_delay=true
+z.com.tgx.chess.cluster.io.size_powers.cluster.3=7
+z.com.tgx.chess.cluster.io.size_powers.internal.1=5
+z.com.tgx.chess.cluster.io.cluster.keep_alive=true
+z.com.tgx.chess.cluster.io.cluster.connect_timeout_in_second=1S
+z.com.tgx.chess.cluster.io.cluster.write_timeout_in_second=10S
+z.com.tgx.chess.cluster.io.cluster.read_timeout_in_minute=1M
+z.com.tgx.chess.cluster.io.cluster.so_linger_in_second=30S
+z.com.tgx.chess.cluster.io.cluster.send_buffer_size=128KB
+z.com.tgx.chess.cluster.io.cluster.recv_buffer_size=128KB
+z.com.tgx.chess.cluster.io.cluster.send_queue_max=64
+z.com.tgx.chess.cluster.io.cluster.tcp_no_delay=true
+z.com.tgx.chess.cluster.io.internal.keep_alive=true
+z.com.tgx.chess.cluster.io.internal.connect_timeout_in_second=1S
+z.com.tgx.chess.cluster.io.internal.write_timeout_in_second=5S
+z.com.tgx.chess.cluster.io.internal.read_timeout_in_minute=1M
+z.com.tgx.chess.cluster.io.internal.so_linger_in_second=30S
+z.com.tgx.chess.cluster.io.internal.send_buffer_size=128KB
+z.com.tgx.chess.cluster.io.internal.recv_buffer_size=128KB
+z.com.tgx.chess.cluster.io.internal.send_queue_max=64
+z.com.tgx.chess.cluster.io.internal.tcp_no_delay=true
