--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -79,5 +79,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <directory>${user.home}/Z-Chess/${project.name}/target</directory>
     </build>
 </project>
