--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -34,7 +34,8 @@ z.com.tgx.chess.raft.peer_test=192.168.10.10:22
 z.com.tgx.chess.raft.gate_test=192.168.10.10:22
 z.com.tgx.chess.raft.uid.idc_id=1
 z.com.tgx.chess.raft.uid.raft_id=1
-z.com.tgx.chess.raft.uid.type=2
+# uid.type provider:2 cluster:3 internal:1 consumer:0
+# z.com.tgx.chess.raft.uid.type=3
 z.com.tgx.chess.raft.peers[0]=192.168.10.12:5228
 z.com.tgx.chess.raft.peers[1]=192.168.10.13:5228
 z.com.tgx.chess.raft.peers[2]=192.168.10.14:5228
