--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -66,5 +66,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <directory>${user.home}/Z-Chess/${project.name}/target</directory>
     </build>
 </project>
