--- a/Z-Endpoint-Start/pom.xml
+++ b/Z-Endpoint-Start/pom.xml
@@ -32,7 +32,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>start.z-start</artifactId>
+    <artifactId>endpoint.z-start</artifactId>
     <name>Z-Endpoint-Start</name>
     <dependencies>
         <dependency>
