bug fix | 坑爹的idea

--- a/Z-Knight/src/main/resources/core.cluster.properties
+++ b/Z-Knight/src/main/resources/core.cluster.properties
@@ -21,20 +21,20 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.cluster.decoder_count=4
+z.chess.cluster.decoder_count=4
 #core protocol encoder count
-z.com.tgx.chess.cluster.encoder_count=2
+z.chess.cluster.encoder_count=2
 #core logic processor count
-z.com.tgx.chess.cluster.logic_count=2
+z.chess.cluster.logic_count=2
 #core cluster io pipeline count
-z.com.tgx.chess.cluster.cluster_io_count=1
+z.chess.cluster.cluster_io_count=1
 #core total aio queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.cluster.aio_queue_power=10
+z.chess.cluster.aio_queue_power=10
 #core cluster queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.cluster.cluster_power=8
+z.chess.cluster.cluster_power=8
 #core biz logic queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.cluster.logic_power=9
+z.chess.cluster.logic_power=9
 #core error queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.cluster.error_power=6
+z.chess.cluster.error_power=6
 #core closer for biz/cluster queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.cluster.closer_power=7
+z.chess.cluster.closer_power=7
