--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -21,23 +21,23 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.raft.max_segment_size=65536
-z.com.tgx.chess.raft.base_dir=${user.home}/Z-Chess
-z.com.tgx.chess.raft.cluster_model=true
-z.com.tgx.chess.raft.elect_in_second=3S
+z.chess.raft.max_segment_size=65536
+z.chess.raft.base_dir=${user.home}/Z-Chess
+z.chess.raft.cluster_model=true
+z.chess.raft.elect_in_second=3S
 #heartbeat_in_second = 3 * elect_in_second
-z.com.tgx.chess.raft.heartbeat_in_second=9S
-z.com.tgx.chess.raft.snapshot_in_second=60S
-z.com.tgx.chess.raft.snapshot_min_size=50MB
-z.com.tgx.chess.raft.bind=0.0.0.0:5228
-z.com.tgx.chess.raft.peer_test=192.168.10.10:22
-z.com.tgx.chess.raft.gate_test=192.168.10.10:22
-z.com.tgx.chess.raft.uid.idc_id=1
-z.com.tgx.chess.raft.uid.raft_id=1
+z.chess.raft.heartbeat_in_second=9S
+z.chess.raft.snapshot_in_second=60S
+z.chess.raft.snapshot_min_size=50MB
+z.chess.raft.bind=0.0.0.0:5228
+z.chess.raft.peer_test=192.168.10.10:22
+z.chess.raft.gate_test=192.168.10.10:22
+z.chess.raft.uid.idc_id=1
+z.chess.raft.uid.raft_id=1
 # uid.type provider:2 cluster:3 internal:1 consumer:0
-# z.com.tgx.chess.raft.uid.type=3
-z.com.tgx.chess.raft.peers[0]=192.168.10.12:5228
-z.com.tgx.chess.raft.peers[1]=192.168.10.13:5228
-z.com.tgx.chess.raft.peers[2]=192.168.10.14:5228
-#z.com.tgx.chess.raft.gates[] ;key for routers between different group
-#z.com.tgx.chess.raft.gates[0]=172.10.10.23:5300
+# z.chess.raft.uid.type=3
+z.chess.raft.peers[0]=192.168.10.12:5228
+z.chess.raft.peers[1]=192.168.10.13:5228
+z.chess.raft.peers[2]=192.168.10.14:5228
+#z.chess.raft.gates[] ;key for routers between different group
+#z.chess.raft.gates[0]=172.10.10.23:5300
