--- a/Z-Pawn/src/main/resources/core.mix.properties
+++ b/Z-Pawn/src/main/resources/core.mix.properties
@@ -21,26 +21,26 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.mix.decoder_count=4
+z.chess.mix.decoder_count=4
 #core protocol encoder count
-z.com.tgx.chess.mix.encoder_count=2
+z.chess.mix.encoder_count=2
 #core logic processor count
-z.com.tgx.chess.mix.logic_count=2
+z.chess.mix.logic_count=2
 #core biz io pipeline count
-z.com.tgx.chess.mix.biz_io_count=3
+z.chess.mix.biz_io_count=3
 #core cluster io pipeline count
-z.com.tgx.chess.mix.cluster_io_count=1
+z.chess.mix.cluster_io_count=1
 #core total aio queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.aio_queue_power=10
+z.chess.mix.aio_queue_power=10
 #core cluster queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.cluster_power=8
+z.chess.mix.cluster_power=8
 #core biz queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.local_power=9
+z.chess.mix.local_power=9
 #core biz link's event queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.link_power=9
+z.chess.mix.link_power=9
 #core biz logic queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.logic_power=9
+z.chess.mix.logic_power=9
 #core error queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.error_power=6
+z.chess.mix.error_power=6
 #core closer for biz/cluster queue pipeline ring buffer size's (2 power)
-z.com.tgx.chess.mix.closer_power=7
+z.chess.mix.closer_power=7
