--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -21,8 +21,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.device.password_invalid_days=41D
-z.com.tgx.chess.device.password_random_seed=z-com.tgx.chess.knight
-z.com.tgx.chess.device.address_ws=0.0.0.0:5226
-z.com.tgx.chess.device.address_qtt=0.0.0.0:1883
+z.chess.device.password_invalid_days=41D
+z.chess.device.password_random_seed=z-com.tgx.chess.knight
+z.chess.device.address_ws=0.0.0.0:5226
+z.chess.device.address_qtt=0.0.0.0:1883
 
