--- a/Z-Rook/src/main/resources/io.consumer.properties
+++ b/Z-Rook/src/main/resources/io.consumer.properties
@@ -21,23 +21,23 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.consumer.io.size_powers.consumer.0=3
-z.com.tgx.chess.consumer.io.size_powers.internal.1=10
-z.com.tgx.chess.consumer.io.consumer.keep_alive=false
-z.com.tgx.chess.consumer.io.consumer.connect_timeout_in_second=5S
-z.com.tgx.chess.consumer.io.consumer.write_timeout_in_second=15S
-z.com.tgx.chess.consumer.io.consumer.read_timeout_in_minute=5M
-z.com.tgx.chess.consumer.io.consumer.so_linger_in_second=10S
-z.com.tgx.chess.consumer.io.consumer.send_buffer_size=8KB
-z.com.tgx.chess.consumer.io.consumer.recv_buffer_size=4KB
-z.com.tgx.chess.consumer.io.consumer.send_queue_max=8
-z.com.tgx.chess.consumer.io.consumer.tcp_no_delay=true
-z.com.tgx.chess.consumer.io.internal.keep_alive=true
-z.com.tgx.chess.consumer.io.internal.connect_timeout_in_second=1S
-z.com.tgx.chess.consumer.io.internal.write_timeout_in_second=5S
-z.com.tgx.chess.consumer.io.internal.read_timeout_in_minute=1M
-z.com.tgx.chess.consumer.io.internal.so_linger_in_second=30S
-z.com.tgx.chess.consumer.io.internal.send_buffer_size=128KB
-z.com.tgx.chess.consumer.io.internal.recv_buffer_size=128KB
-z.com.tgx.chess.consumer.io.internal.send_queue_max=64
-z.com.tgx.chess.consumer.io.internal.tcp_no_delay=true
+z.chess.consumer.io.size_powers.consumer.0=3
+z.chess.consumer.io.size_powers.internal.1=10
+z.chess.consumer.io.consumer.keep_alive=false
+z.chess.consumer.io.consumer.connect_timeout_in_second=5S
+z.chess.consumer.io.consumer.write_timeout_in_second=15S
+z.chess.consumer.io.consumer.read_timeout_in_minute=5M
+z.chess.consumer.io.consumer.so_linger_in_second=10S
+z.chess.consumer.io.consumer.send_buffer_size=8KB
+z.chess.consumer.io.consumer.recv_buffer_size=4KB
+z.chess.consumer.io.consumer.send_queue_max=8
+z.chess.consumer.io.consumer.tcp_no_delay=true
+z.chess.consumer.io.internal.keep_alive=true
+z.chess.consumer.io.internal.connect_timeout_in_second=1S
+z.chess.consumer.io.internal.write_timeout_in_second=5S
+z.chess.consumer.io.internal.read_timeout_in_minute=1M
+z.chess.consumer.io.internal.so_linger_in_second=30S
+z.chess.consumer.io.internal.send_buffer_size=128KB
+z.chess.consumer.io.internal.recv_buffer_size=128KB
+z.chess.consumer.io.internal.send_queue_max=64
+z.chess.consumer.io.internal.tcp_no_delay=true
