--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -24,9 +24,9 @@
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
-z.com.tgx.chess.raft.uid.type=3
-z.com.tgx.chess.raft.peers[0]=192.168.56.100:5228
-z.com.tgx.chess.raft.peers[1]=192.168.56.1:5228
-z.com.tgx.chess.raft.peer_test=192.168.56.100:22
-z.com.tgx.chess.raft.cluster_model=true
+z.chess.raft.uid.type=3
+z.chess.raft.peers[0]=192.168.56.100:5228
+z.chess.raft.peers[1]=192.168.56.1:5228
+z.chess.raft.peer_test=192.168.56.100:22
+z.chess.raft.cluster_model=true
 #spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
