--- a/Z-Pawn/src/main/resources/io.provider.properties
+++ b/Z-Pawn/src/main/resources/io.provider.properties
@@ -21,26 +21,26 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.provider.io.size_powers.consumer.0=12
-z.com.tgx.chess.provider.io.size_powers.internal.1=7
-z.com.tgx.chess.provider.io.size_powers.provider.2=9
-z.com.tgx.chess.provider.io.size_powers.cluster.3=7
-z.com.tgx.chess.provider.io.consumer.keep_alive=false
-z.com.tgx.chess.provider.io.consumer.connect_timeout_in_second=5S
-z.com.tgx.chess.provider.io.consumer.write_timeout_in_second=15S
-z.com.tgx.chess.provider.io.consumer.read_timeout_in_minute=5M
-z.com.tgx.chess.provider.io.consumer.so_linger_in_second=10S
-z.com.tgx.chess.provider.io.consumer.send_buffer_size=8KB
-z.com.tgx.chess.provider.io.consumer.recv_buffer_size=4KB
-z.com.tgx.chess.provider.io.consumer.send_queue_max=8
-z.com.tgx.chess.provider.io.consumer.tcp_no_delay=true
-z.com.tgx.chess.provider.io.internal.keep_alive=true
-z.com.tgx.chess.provider.io.internal.connect_timeout_in_second=1S
-z.com.tgx.chess.provider.io.internal.write_timeout_in_second=5S
-z.com.tgx.chess.provider.io.internal.read_timeout_in_minute=1M
-z.com.tgx.chess.provider.io.internal.so_linger_in_second=30S
-z.com.tgx.chess.provider.io.internal.send_buffer_size=128KB
-z.com.tgx.chess.provider.io.internal.recv_buffer_size=128KB
+z.chess.provider.io.size_powers.consumer.0=12
+z.chess.provider.io.size_powers.internal.1=7
+z.chess.provider.io.size_powers.provider.2=9
+z.chess.provider.io.size_powers.cluster.3=7
+z.chess.provider.io.consumer.keep_alive=false
+z.chess.provider.io.consumer.connect_timeout_in_second=5S
+z.chess.provider.io.consumer.write_timeout_in_second=15S
+z.chess.provider.io.consumer.read_timeout_in_minute=5M
+z.chess.provider.io.consumer.so_linger_in_second=10S
+z.chess.provider.io.consumer.send_buffer_size=8KB
+z.chess.provider.io.consumer.recv_buffer_size=4KB
+z.chess.provider.io.consumer.send_queue_max=8
+z.chess.provider.io.consumer.tcp_no_delay=true
+z.chess.provider.io.internal.keep_alive=true
+z.chess.provider.io.internal.connect_timeout_in_second=1S
+z.chess.provider.io.internal.write_timeout_in_second=5S
+z.chess.provider.io.internal.read_timeout_in_minute=1M
+z.chess.provider.io.internal.so_linger_in_second=30S
+z.chess.provider.io.internal.send_buffer_size=128KB
+z.chess.provider.io.internal.recv_buffer_size=128KB
 z.com.tgx.chess.provider.io.internal.send_queue_max=64
 z.com.tgx.chess.provider.io.internal.tcp_no_delay=true
 z.com.tgx.chess.provider.io.provider.keep_alive=true
