--- a/Z-Bishop/pom.xml
+++ b/Z-Bishop/pom.xml
@@ -30,9 +30,9 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>manage.z-bishop</artifactId>
+    <artifactId>protocol.z-bishop</artifactId>
     <name>Z-Bishop</name>
     <dependencies>
         <dependency>
