--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -30,14 +30,14 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>cluster.z-knight</artifactId>
     <name>Z-Knight</name>
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>manage.z-bishop</artifactId>
+            <artifactId>protocol.z-bishop</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--spring boot-->
