--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -30,14 +30,14 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>endpoint.z-pawn</artifactId>
     <name>Z-Pawn</name>
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>spring.z-knight</artifactId>
+            <artifactId>cluster.z-knight</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--JPA-->
