--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -23,6 +23,7 @@
 #
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.main.allow-bean-definition-overriding=true
 spring.output.ansi.enabled=ALWAYS
 z.chess.raft.uid.type=2
 z.chess.raft.peers[0]=192.168.56.100:5228
