--- a/Z-Pawn/src/main/resources/io.provider.properties
+++ b/Z-Pawn/src/main/resources/io.provider.properties
@@ -41,23 +41,23 @@ z.chess.provider.io.internal.read_timeout_in_minute=1M
 z.chess.provider.io.internal.so_linger_in_second=30S
 z.chess.provider.io.internal.send_buffer_size=128KB
 z.chess.provider.io.internal.recv_buffer_size=128KB
-z.com.tgx.chess.provider.io.internal.send_queue_max=64
-z.com.tgx.chess.provider.io.internal.tcp_no_delay=true
-z.com.tgx.chess.provider.io.provider.keep_alive=true
-z.com.tgx.chess.provider.io.provider.connect_timeout_in_second=1S
-z.com.tgx.chess.provider.io.provider.write_timeout_in_second=5S
-z.com.tgx.chess.provider.io.provider.read_timeout_in_minute=1M
-z.com.tgx.chess.provider.io.provider.so_linger_in_second=30S
-z.com.tgx.chess.provider.io.provider.send_buffer_size=128KB
-z.com.tgx.chess.provider.io.provider.recv_buffer_size=128KB
-z.com.tgx.chess.provider.io.provider.send_queue_max=64
-z.com.tgx.chess.provider.io.provider.tcp_no_delay=true
-z.com.tgx.chess.provider.io.cluster.keep_alive=true
-z.com.tgx.chess.provider.io.cluster.connect_timeout_in_second=1S
-z.com.tgx.chess.provider.io.cluster.write_timeout_in_second=5S
-z.com.tgx.chess.provider.io.cluster.read_timeout_in_minute=1M
-z.com.tgx.chess.provider.io.cluster.so_linger_in_second=30S
-z.com.tgx.chess.provider.io.cluster.send_buffer_size=128KB
-z.com.tgx.chess.provider.io.cluster.recv_buffer_size=128KB
-z.com.tgx.chess.provider.io.cluster.send_queue_max=64
-z.com.tgx.chess.provider.io.cluster.tcp_no_delay=true
+z.chess.provider.io.internal.send_queue_max=64
+z.chess.provider.io.internal.tcp_no_delay=true
+z.chess.provider.io.provider.keep_alive=true
+z.chess.provider.io.provider.connect_timeout_in_second=1S
+z.chess.provider.io.provider.write_timeout_in_second=5S
+z.chess.provider.io.provider.read_timeout_in_minute=1M
+z.chess.provider.io.provider.so_linger_in_second=30S
+z.chess.provider.io.provider.send_buffer_size=128KB
+z.chess.provider.io.provider.recv_buffer_size=128KB
+z.chess.provider.io.provider.send_queue_max=64
+z.chess.provider.io.provider.tcp_no_delay=true
+z.chess.provider.io.cluster.keep_alive=true
+z.chess.provider.io.cluster.connect_timeout_in_second=1S
+z.chess.provider.io.cluster.write_timeout_in_second=5S
+z.chess.provider.io.cluster.read_timeout_in_minute=1M
+z.chess.provider.io.cluster.so_linger_in_second=30S
+z.chess.provider.io.cluster.send_buffer_size=128KB
+z.chess.provider.io.cluster.recv_buffer_size=128KB
+z.chess.provider.io.cluster.send_queue_max=64
+z.chess.provider.io.cluster.tcp_no_delay=true
