--- a/Z-Endpoint-Start/pom.xml
+++ b/Z-Endpoint-Start/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1 RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>endpoint.z-start</artifactId>
