--- a/Z-King/pom.xml
+++ b/Z-King/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1 RELEASE</version>
     </parent>
     <artifactId>core.z-king</artifactId>
     <name>Z-King</name>
