--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>com.tgx.service</groupId>
     <artifactId>framework.z-chess</artifactId>
     <name>Z-Chess</name>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1 RELEASE</version>
     <packaging>pom</packaging>
     <modules>
         <module>Z-King</module>
