--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -39,5 +39,6 @@ z.chess.raft.uid.raft_id=1
 z.chess.raft.peers[0]=192.168.10.12:5228
 z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
+z.chess.raft.peers[3]=192.168.10.15:5228
 #z.chess.raft.gates[] ;key for routers between different group
 #z.chess.raft.gates[0]=172.10.10.23:5300
