--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -25,3 +25,4 @@ server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
 z.chess.raft.uid.type=3
+z.chess.raft.peers[4]=192.168.10.2:5228
