--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -28,5 +28,5 @@ z.chess.raft.uid.type=3
 z.chess.raft.peers[0]=192.168.10.12:5228
 z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
-z.chess.raft.peers[3]=192.168.10.15:5228
-z.chess.raft.peers[4]=192.168.10.2:5228
+#z.chess.raft.peers[3]=192.168.10.15:5228
+#z.chess.raft.peers[4]=192.168.10.2:5228
