--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.1 RELEASE</version>
+        <version>1.0.2.RELEASE</version>
     </parent>
     <artifactId>cluster.z-knight</artifactId>
     <name>Z-Knight</name>
