--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
-        <version>1.0.2.RELEASE</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
     <artifactId>client.z-rook</artifactId>
     <name>Z-Rook</name>
