--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -25,6 +25,7 @@ server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
 z.chess.raft.uid.type=3
+z.chess.raft.peer_test=192.168.56.100:22
 z.chess.raft.peers[0]=192.168.56.100:5228
 z.chess.raft.peers[1]=192.168.56.1:5228
 #z.chess.raft.peers[2]=192.168.10.14:5228
