--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -30,4 +30,4 @@ z.chess.raft.peers[0]=192.168.55.100:5228
 z.chess.raft.peers[1]=192.168.55.1:5228
 z.chess.raft.peer_test=192.168.55.100:22
 #z.chess.raft.cluster_model=false
-#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
+spring.datasource.url=jdbc:postgresql://192.168.55.100:5432/tgx.z-chess
