增加了 在cluster leader中对一致性状态进行逻辑处理的能力

--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -23,7 +23,7 @@
 #
 z.chess.raft.max_segment_size=65536
 z.chess.raft.base_dir=${user.home}/Z-Chess
-z.chess.raft.cluster_model=true
+z.chess.raft.cluster_mode=true
 z.chess.raft.elect_in_second=3S
 #heartbeat_in_second = 3 * elect_in_second
 z.chess.raft.heartbeat_in_second=9S
