--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -53,6 +53,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!--Commons-Io-->
         <dependency>
             <groupId>commons-io</groupId>
