--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -25,6 +25,8 @@ z.chess.raft.max_segment_size=65536
 z.chess.raft.base_dir=${user.home}/Z-Chess
 z.chess.raft.cluster_mode=true
 z.chess.raft.elect_in_second=3S
+#client_submit_in_Second=2*elect_in_second
+z.chess.raft.client_submit_in_second=6S
 #heartbeat_in_second = 3 * elect_in_second
 z.chess.raft.heartbeat_in_second=9S
 z.chess.raft.snapshot_in_second=60S
