--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>com.tgx.service</groupId>
     <artifactId>framework.z-chess</artifactId>
     <name>Z-Chess</name>
-    <version>1.0.3.SNAPSHOT</version>
+    <version>1.0.9.SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>Z-King</module>
@@ -268,6 +268,19 @@
     </dependencyManagement>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
