--- a/pom.xml
+++ b/pom.xml
@@ -307,11 +307,11 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>http://mvnrepo.tinygamex.com:8081/nexus/content/repositories/releases/</url>
+            <url>http://mvnrepo.alibaba-inc.com/mvn/releases</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://mvnrepo.tinygamex.com:8081/nexus/content/repositories/snapshots/</url>
+            <url>http://mvnrepo.alibaba-inc.com/mvn/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
