--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
         <!--Commons-Io-->
         <dependency>
             <groupId>commons-io</groupId>
