--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
                 <artifactId>spring-security-config</artifactId>
                 <version>${spring-security.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>${spring-boot.version}</version>
+                <optional>true</optional>
+            </dependency>
             <!--  postgresql DB -->
             <dependency>
                 <groupId>org.postgresql</groupId>
