--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -31,6 +31,7 @@ z.chess.raft.client_submit_in_second=6S
 z.chess.raft.heartbeat_in_second=9S
 z.chess.raft.snapshot_in_second=60S
 z.chess.raft.snapshot_min_size=50MB
+z.chess.raft.snapshot_fragment_max_size=80KB
 z.chess.raft.bind=0.0.0.0:5228
 z.chess.raft.peer_test=192.168.10.10:22
 z.chess.raft.gate_test=192.168.10.10:22
