--- a/Z-Player/pom.xml
+++ b/Z-Player/pom.xml
@@ -40,5 +40,13 @@
             <artifactId>endpoint.z-pawn</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
