--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
         <junit.engine.version>5.6.0</junit.engine.version>
         <mockito.version>2.18.3</mockito.version>
+        <!--CACHE-->
+        <ehcache.version>3.8.1</ehcache.version>
+        <jsr107.version>1.1.1</jsr107.version>
     </properties>
     <dependencies>
         <!--Log-->
@@ -124,6 +127,7 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <!--Log-->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -139,11 +143,13 @@
                 <artifactId>logback-core</artifactId>
                 <version>${logback.version}</version>
             </dependency>
+            <!--IO-->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+            <!--SpringBoot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -208,6 +214,17 @@
                 <groupId>com.vladmihalcea</groupId>
                 <artifactId>hibernate-types-52</artifactId>
                 <version>${hibernate-types.version}</version>
+            </dependency>
+            <!--Cache-->
+            <dependency>
+                <groupId>org.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+                <version>${ehcache.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>${jsr107.version}</version>
             </dependency>
             <!-- 测试用依赖 -->
             <dependency>
