--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -61,6 +61,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
         <!--Commons-Io-->
         <dependency>
             <groupId>commons-io</groupId>
