--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -49,6 +49,10 @@
             <groupId>com.vladmihalcea</groupId>
             <artifactId>hibernate-types-52</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!--DB-->
         <dependency>
             <groupId>org.postgresql</groupId>
