--- a/pom.xml
+++ b/pom.xml
@@ -54,25 +54,24 @@
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <!--SPRING-BOOT-->
-        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
         <!--Commons-IO-->
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.7</commons-io.version>
         <!--DB-->
-        <postgresql.driver.version>42.2.12</postgresql.driver.version>
-        <hibernate-types.version>2.9.8</hibernate-types.version>
+        <postgresql.driver.version>42.2.14</postgresql.driver.version>
+        <hibernate-types.version>2.9.12</hibernate-types.version>
         <!--PIPELINE-->
         <disruptor.version>3.4.2</disruptor.version>
         <!--TOOLS-->
         <httpcore.version>4.4.13</httpcore.version>
         <!--TEST TOOLS VERSION-->
-        <junit.platform.version>1.6.0</junit.platform.version>
-        <junit.vintage.version>5.6.0</junit.vintage.version>
-        <junit.jupiter.version>5.6.0</junit.jupiter.version>
-        <junit.engine.version>5.6.0</junit.engine.version>
-        <mockito.version>2.18.3</mockito.version>
+        <junit.platform.version>1.6.2</junit.platform.version>
+        <junit.vintage.version>5.6.2</junit.vintage.version>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <junit.engine.version>5.6.2</junit.engine.version>
+        <mockito.version>3.3.3</mockito.version>
         <!--CACHE-->
         <ehcache.version>3.8.1</ehcache.version>
-        <jsr107.version>1.1.1</jsr107.version>
     </properties>
     <dependencies>
         <!--Log-->
@@ -180,6 +179,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
@@ -220,11 +224,6 @@
                 <groupId>org.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
                 <version>${ehcache.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.cache</groupId>
-                <artifactId>cache-api</artifactId>
-                <version>${jsr107.version}</version>
             </dependency>
             <!-- 测试用依赖 -->
             <dependency>
@@ -269,7 +268,12 @@
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
-            <!-- 单元测试依赖 -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
