加入Spring5+Junit5的测试入口

--- a/Z-Player/pom.xml
+++ b/Z-Player/pom.xml
@@ -45,8 +45,8 @@
             <artifactId>ehcache</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.cache</groupId>
-            <artifactId>cache-api</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
     </dependencies>
 </project>
