--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -25,9 +25,9 @@ server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.main.allow-bean-definition-overriding=true
 spring.output.ansi.enabled=ALWAYS
-z.chess.raft.uid.type=2
+z.chess.raft.uid.type=3
 z.chess.raft.peers[0]=192.168.10.12:5228
 z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
-#z.chess.raft.cluster_model=false
-#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
+z.chess.raft.cluster_model=false
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tgx.z-chess
