增加配置 提供 设定是否使用MQTT_OVER_WEBSOCKET 模式

--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -31,3 +31,4 @@ z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
 z.chess.raft.cluster_model=false
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tgx.z-chess
+z.chess.device.qtt_over_ws=false
