--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -25,3 +25,4 @@ z.chess.device.password_invalid_days=41D
 z.chess.device.password_random_seed=z-com.tgx.chess.knight
 z.chess.device.address_ws=0.0.0.0:5226
 z.chess.device.address_qtt=0.0.0.0:1883
+z.chess.device.qtt_over_ws=false
