--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -23,6 +23,12 @@
 #
 z.chess.device.password_invalid_days=41D
 z.chess.device.password_random_seed=z-com.tgx.chess.knight
-z.chess.device.address_ws=0.0.0.0:5226
-z.chess.device.address_qtt=0.0.0.0:1883
-z.chess.device.qtt_over_ws=false
+z.chess.device.listeners[0].host=0.0.0.0
+z.chess.device.listeners[0].port=1883
+z.chess.device.listeners[0].scheme=mqtt
+z.chess.device.listeners[1].host=0.0.0.0
+z.chess.device.listeners[1].port=1884
+z.chess.device.listeners[1].scheme=ws_mqtt
+z.chess.device.listeners[2].host=0.0.0.0
+z.chess.device.listeners[2].port=1885
+z.chess.device.listeners[2].scheme=ws
