--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -29,5 +29,5 @@ z.chess.raft.uid.type=3
 z.chess.raft.peers[0]=192.168.10.12:5228
 z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
-z.chess.raft.cluster_model=false
+z.chess.raft.cluster_mode=false
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tgx.z-chess
