--- a/Z-Consensus-Start/pom.xml
+++ b/Z-Consensus-Start/pom.xml
@@ -60,5 +60,6 @@
                 </executions>
             </plugin>
         </plugins>
+<!--        <directory>${user.home}/Z-Chess/${project.name}/target</directory>-->
     </build>
 </project>
