--- a/Z-Endpoint-Start/pom.xml
+++ b/Z-Endpoint-Start/pom.xml
@@ -61,5 +61,6 @@
                 </executions>
             </plugin>
         </plugins>
+<!--        <directory>${user.home}/Z-Chess/${project.name}/target</directory>-->
     </build>
 </project>
