--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -98,5 +98,6 @@
                 </executions>
             </plugin>
         </plugins>
+<!--        <directory>${user.home}/Z-Chess/${project.name}/target</directory>-->
     </build>
 </project>
