--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.isahl.chess</groupId>
             <artifactId>cluster.z-knight</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.11-SNAPSHOT</version>
         </dependency>
         <!--JPA-->
         <dependency>
