--- a/Z-Player/pom.xml
+++ b/Z-Player/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.isahl.chess</groupId>
             <artifactId>endpoint.z-pawn</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.11-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.ehcache</groupId>
