--- a/Z-Test/pom.xml
+++ b/Z-Test/pom.xml
@@ -71,5 +71,6 @@
                 </executions>
             </plugin>
         </plugins>
+<!--        <directory>${user.home}/Z-Chess/${project.name}/target</directory>-->
     </build>
 </project>
