--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -28,3 +28,4 @@ z.chess.raft.peers[0]=192.168.10.12:5228
 z.chess.raft.peers[1]=192.168.10.13:5228
 z.chess.raft.peers[2]=192.168.10.14:5228
 z.chess.raft.cluster_mode=false
+z.chess.raft.cluster_mode=false
