--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -31,3 +31,6 @@ z.chess.device.listeners[1].scheme=ws_mqtt
 z.chess.device.listeners[2].host=0.0.0.0
 z.chess.device.listeners[2].port=1885
 z.chess.device.listeners[2].scheme=ws
+z.chess.device.listeners[3].host=0.0.0.0
+z.chess.device.listeners[3].port=1886
+z.chess.device.listeners[3].scheme=zls_mqtt
