--- a/Z-Test/src/main/resources/application.properties
+++ b/Z-Test/src/main/resources/application.properties
@@ -24,5 +24,5 @@ server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.main.allow-bean-definition-overriding=true
 spring.output.ansi.enabled=ALWAYS
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tgx.z-chess
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/isahl.z-chess
 z.chess.raft.cluster_mode=false
