update web socket config

--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -34,4 +34,4 @@ z.chess.device.listeners[2].scheme=ws
 z.chess.device.listeners[3].host=0.0.0.0
 z.chess.device.listeners[3].port=1886
 z.chess.device.listeners[3].scheme=zls_mqtt
-z.chess.device.multi_bind=true
+z.chess.device.multi_bind=false
