--- a/Z-Pawn/src/main/resources/io.provider.properties
+++ b/Z-Pawn/src/main/resources/io.provider.properties
@@ -35,6 +35,7 @@ z.chess.provider.io.consumer.send_queue_max=8
 z.chess.provider.io.consumer.tcp_no_delay=true
 z.chess.provider.io.consumer.key_store_path=cert/server-certificate.p12
 z.chess.provider.io.consumer.trust_key_store_path=cert/client-certificate.p12
+z.chess.provider.io.consumer.client_auth=false
 z.chess.provider.io.consumer.key_password=mqtt-test
 z.chess.provider.io.consumer.trust_key_password=mqtt-test
 z.chess.provider.io.internal.keep_alive=true
