--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -31,7 +31,6 @@ z.chess.raft.peers[2]=192.168.10.14:5228
 z.chess.raft.cluster_mode=false
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/isahl.z-chess
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
-#z.chess.provider.io.consumer.trust_key_store_path=cert/trustedCerts.jks
+z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
 #z.chess.provider.io.consumer.trust_key_password=storepass
-z.chess.provider.io.consumer.recv_buffer_size=20KB
