websocket & ssl package construction changes

--- a/Z-Pawn/src/main/resources/device.properties
+++ b/Z-Pawn/src/main/resources/device.properties
@@ -27,17 +27,23 @@ z.chess.device.listeners[0].port=1883
 z.chess.device.listeners[0].scheme=mqtt
 z.chess.device.listeners[1].host=0.0.0.0
 z.chess.device.listeners[1].port=1884
-z.chess.device.listeners[1].scheme=ws_mqtt
+z.chess.device.listeners[1].scheme=ws-mqtt
 z.chess.device.listeners[2].host=0.0.0.0
 z.chess.device.listeners[2].port=1885
-z.chess.device.listeners[2].scheme=ws
+z.chess.device.listeners[2].scheme=tls-mqtt
 z.chess.device.listeners[3].host=0.0.0.0
 z.chess.device.listeners[3].port=1886
-z.chess.device.listeners[3].scheme=zls_mqtt
+z.chess.device.listeners[3].scheme=ws-zchat
 z.chess.device.listeners[4].host=0.0.0.0
 z.chess.device.listeners[4].port=1888
-z.chess.device.listeners[4].scheme=ssl_mqtt
+z.chess.device.listeners[4].scheme=wss-zchat
 z.chess.device.listeners[5].host=0.0.0.0
 z.chess.device.listeners[5].port=1889
-z.chess.device.listeners[5].scheme=wss
+z.chess.device.listeners[5].scheme=wss-mqtt
+z.chess.device.listeners[6].host=0.0.0.0
+z.chess.device.listeners[6].port=1890
+z.chess.device.listeners[6].scheme=ws-text
+z.chess.device.listeners[7].host=0.0.0.0
+z.chess.device.listeners[7].port=1891
+z.chess.device.listeners[7].scheme=wss-text
 z.chess.device.multi_bind=false
